--- a/slides/recursive-types.tex
+++ b/slides/recursive-types.tex
@@ -20,7 +20,7 @@
 % \date{\today}
 \date{}
 \author{Esther Wang}
-\institute{Software Engineer - Airbnb}
+\institute{LambdaConf 2018}
 % \titlegraphic{\hfill\includegraphics[height=1.5cm]{logo.pdf}}
 
 \begin{document}
